examples/test/testpolicy14120.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14120
  namespace: namespace204
spec:
  podSelector:
    matchLabels:
      key33: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value35
          key11: value47
          key13: value26
      podSelector:
        matchLabels:
          key0: value49
          key40: value25
          key43: value46
